08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* aclocal.m4 (BASH_CHECK_LIB_TERMCAP): Added.
	(RL_LIB_READLINE_VERSION): Added.
	* config.h.in: Autogenerated.
	* configure: Autogenerated.
	* configure.in: Check readline version to link against.
	* various/Makefile.in: Autogenerated.
	* NEWS: Add release note.

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (SUBDIRS): Remove READLINE_DIR.
	(EXTRA_DIST): Remove READLINE_DIR.
	* Makefile.in: Autogenerated.
	* NEWS: Readline is no longer packaged.
	* configure.in: Remove debugging information.
	Remove internal readline configuration.
	* various/Makefile.in: Autogenerated.

07/28/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (EXTRA_DIST): Undo last commit.
	* Makefile.in: Autogenerated.

07/28/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (EXTRA_DIST): Fix READLINE_DIR directory.
	* Makefile.in: Autogenerated.

07/27/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update todo task for release after .5.3.

07/27/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Move final task for .5.3.
	* readline-5.0/configure (opt_shared_libs): Modified default value
	from yes to no.

07/26/2005 Bob Rossi <bob@brasko.net>

	* FAQ: Update.
	* RELEASE_TODO: Update todo for next release.

07/26/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Add note about new temporary breakpoint functionality.

07/26/2005 Marcel Lanz <marcel.lanz@ds9.ch>

	* README (Source Window): Changed 't' key to be the 'I' key.
	(Source Window): Added new documentation for the 't' key.

07/23/2005 Mike Mueller <mike@subfocal.net>

    * cgdb/src/sources.c: Fixed crash and better respect of tabs in
    draw_current_line (the new arrowstyle method).

07/14/2005 Bob Rossi <bob@brasko.net>

	* README: Added documentation for packaged readline
	* RELEASE_TODO: Updated necessary work to do for next release.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (SUBDIRS): Added $(READLINE_DIR).
	(EXTRA_DIST): Ditto.