@@ -1,5 +1,9 @@
 08/02/2005 Bob Rossi <bob@brasko.net>
 
+	* config/readline_check_version.m4: Add new macro.
+
+08/02/2005 Bob Rossi <bob@brasko.net>
+
 	* Makefile.in: Autogenerated.
 	* aclocal.m4 (BASH_CHECK_LIB_TERMCAP): Added.
 	(RL_LIB_READLINE_VERSION): Added.
